<resources>
    <string name="app_name">Mon amie</string>

    <!--Google maps-->
    <string name="google_maps_key">AIzaSyDlejAOo4W8iHCuXGvKJ3bCJh0KxKDPdl4</string>


    <string name="connect_to_network">connect_to_network</string>
    <string name="connect_to_wifi">connect_to_wifi</string>
    <string name="quit">quit</string>

    <string name="general_screen_action_bar_title">Mon amie</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Navigation Drawer title-->
    <string name="product_categories">Product Categories</string>
    <string name="payment_system">Payment System</string>
    <string name="order_history">Order History</string>
    <string name="google_maps">Google Maps</string>
    <string name="contact_us">Contact Us</string>
    <string name="policy">Policy</string>
    <string name="other">Other</string>
    <string name="log_out">Log Out</string>

    <!--Sign In-->
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account. Sign Up</string>

    <!--Sign Up-->
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="do_you_have_account">Do you have account ? Sign In</string>
    <string name="bird_of_day">Bird of day</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="phone_number">Phone number</string>

    <!--Token-->
    <string name="gcm_token" translatable="false">Instance ID Token %s</string>

    <!--FireBase-->
    <string name="default_notification_channel_id">1</string>
    <string name="fcm_message">FCM Message</string>

    <!--ProductCategory Login Dialog-->
    <string name="user_login_dialog_message_text">Login Failed !!!</string>
    <string name="user_login_dialog_button_text">OK</string>

    <!--ProductCategory Registration Dialog-->
    <string name="user_registration_dialog_success_message_text">Registration Successfully</string>
    <string name="user_registration_dialog_field_message_text">Registration Field</string>
    <string name="user_registration_dialog_button_text">OK</string>
    <string name="user_registration_day">Day</string>
    <string name="user_registration_month">Month</string>
    <string name="user_registration_year">Year</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <!--Contact Us Activity-->
    <string name="contact_us_title">Contact Us</string>
    <string name="contact_us_about_us">About Us</string>
    <string name="contact_us_map">Map</string>
    <string name="contact_us_email">Email</string>
    <string name="contact_us_website">Website</string>
    <string name="contact_us_facebook">Facebook</string>
    <string name="contact_us_instagram">Instagram</string>
    <string name="contact_us_twitter">Twitter</string>
    <string name="contact_us_google_plus">Google Plus</string>
    <string name="contact_us_mon_amie_information">Mon Amie Information</string>
    <string name="contact_us_about_us_details_text">It is hard to imagine any event or celebration without floral decoration, it is conference exhibition or wedding birthday anniversary housewarming or a long-awaited meeting with a person important and precious for you, unique design or bouquet makes it more memorable.At Mon Amy flower and design salon you can always order original compositions and design for any occasion. And our qualified florist-designers will help you to create a beautiful bouquet and to design the event venue.Fresh roses, original lilies, unique tulips and hundreds of other exotic plants and flowers delivered from different corners of the world will make any event to day of color and fragrance.Mon Amie flower and design shop chain was founded in 2002 in Yerevan. In summer 2013a new Mon Amy shop has been opened in Krasnodar, Russian Federation. Our partners are large enterprises and international organizations in Armenia. We also had a privilege to decorate different events of national significance.Our specialists regularly participate in international trainings and competitions. In 2013 in Taipei (Taiwan, China) our specialists were awarded with International Flower Design Award and with the diploma of Armenian social political journal Parliament.According to the results of competition held by journal Business news and companySociometer Mon Amie has been awarded as a best brand and the best service provider of the year and the best flower salon as well. </string>


</resources>
