<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SignInActivity">

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:padding="40dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="#302b2c"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/SignInEmailID"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_edittext"
                android:hint="@string/email"
                android:textAlignment="center"
                android:textColorHint="#302b2c" />

            <EditText
                android:id="@+id/SignInPasswordID"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="#302b2c" />

            <Button
                android:id="@+id/SignInLogInID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_button"
                android:text="@string/log_in"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingEnd="30dp"
        android:id="@+id/signUpLayoutId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingRight="30dp"
        tools:ignore="RtlSymmetry">
        <TextView
            android:id="@+id/SignInSignUpID"
            android:textColor="#000"
            android:textSize="17sp"
            android:gravity="end"
            android:text="@string/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>